Solved up to charting portion

--- a/Pymaceuticals/pymaceuticals_starter_guided.ipynb
+++ b/Pymaceuticals/pymaceuticals_starter_guided.ipynb
@@ -136,6 +136,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "import scipy.stats as st\n",
+    "import numpy as np\n",
     "\n",
     "# Study data files\n",
     "mouse_metadata_path = \"data/Mouse_metadata.csv\"\n",
@@ -1235,9 +1236,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [conda env:PythonData38]",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "conda-env-PythonData38-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1249,7 +1250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
